- fixato il processo di acquisto che non assegnava l'utente loggato - Fixato problema nel profilo che non recuperava l'anagrafica - fix posizione footer - implementata pagina ordine completato - Eliminato overflow:hidden dalla pagina storico ordini - Fixato pulsante logout admin dashboard - è da finire il modale dell'aggiunta al carrello nella pagina dettagli del videogioco

--- a/WebAppPlayshphere/WebAppPlayshphere/wwwroot/css/Layout/mainLayout.css
+++ b/WebAppPlayshphere/WebAppPlayshphere/wwwroot/css/Layout/mainLayout.css
@@ -128,8 +128,8 @@ form > .btn {
 /* -- FOOTER -- */
 footer {
     background-color: var(--black-olive);
-    position: fixed !important;
-    bottom: 0;
+    /*position: fixed !important;
+    bottom: 0;*/
     width: 100%;
     z-index: 500;
 }
